[package]
name = "nudget"
version = "0.1.1"
description = "A simple zero based budgeting app"
authors = ["Injourn"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "dialog-save", "dialog-open", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_rusqlite = { version = "0.35", features = [ ] }
rusqlite = {version = "0.31.0", features = ["bundled"] }
anyhow = "1.0"
rust_decimal = "1.34.3"
chrono = "0.4.38"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
