[package]
name = "nudget"
version = "0.1.1"
description = "A simple zero based budgeting app"
authors = ["Injourn"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_rusqlite = { version = "0.35", features = [ ] }
rusqlite = {version = "0.31.0", features = ["bundled"] }
anyhow = "1.0"
rust_decimal = "1.34.3"
chrono = "0.4.38"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
log = "0.4.27"
tauri-plugin-log = "2"
uuid = { version = "1.19.0",features = ["v4",]}

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
